# EZWowX2

./: GUIDE.md  README.md  plan.md  rebuild.md
EZAddonX2/: EZAddonX2.toc  Setting.lua
EZAssistedX2.NET/: 启动EZAssistedX2.bat
EZAssistedX2.PY/: EZAssistedX2.py  Start - 快捷方式.lnk  Start.bat  floating_window.py  generate_icon.py  hotkey_manager.py  requirements.txt  settings.json  settings_manager.py  skill_name_editor.py  skill_name_manager.py  smart_logging.py  window_enumerator.py  启动EZAssistedX2.bat
EZBridgeX2/: README.md
EZDriverX2/: DruidBalance.py  DruidFeral.py  DruidGuardian.py  DruidRestoration.py  PriestDiscipline.py  README.md  comment_deleter.py  pyproject.toml
EZDriverX2/EZDriverX2/: __init__.py  app.py
EZDriverX2/EZDriverX2/config/: __init__.py  defaults.py  items.py  macros.py  node_layout.py  occlusion_rules.py  registry.py  validation.py
EZDriverX2/EZDriverX2/contracts/: __init__.py  actions.py  profile.py
EZDriverX2/EZDriverX2/engine/: __init__.py  container.py  executor.py  implementations.py  interfaces.py  loop.py  mocks.py
EZDriverX2/EZDriverX2/input/: __init__.py  win32_sender.py
EZDriverX2/EZDriverX2/runtime/: __init__.py  context.py  data.py  exceptions.py  immutable.py  recovery.py  state_adapter.py
EZDriverX2/EZDriverX2/tests/: __init__.py  framework.py  test_immutable.py  test_interfaces.py  test_runtime.py
EZDriverX2/EZDriverX2/transport/: __init__.py  bridge_client.py
EZDriverX2/EZDriverX2/ui/: __init__.py  main_window.py
EZDriverX2/EZDriverX2/utils/: __init__.py  monitoring.py
docs/: API.md  CODING_STANDARDS.md  (+6 more)
(+21 files in other folders)
