[project]
name = "EZDriverX2"
version = "12.0.1.66044"
description = ""
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pyright==1.1.408,<2.0",
    "pyside6>=6.10.1,<7.0.0",
    "pywin32>=311,<312",
    "requests>=2.32.5,<3.0",
]

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "typings"
include = [
    "src/EZDriverX2",
    "src/*.py",
]
exclude = [
    ".venv",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]

